// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Container should render Default 1`] = `
<DocumentFragment>
  <footer
    class="css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    >
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      />
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-85dbd7-FooterSeparator enubu9x3"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer Container should render WithClassName 1`] = `
<DocumentFragment>
  <footer
    class="extra-classname css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    >
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      />
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-85dbd7-FooterSeparator enubu9x3"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer Container should render WithEmotion 1`] = `
<DocumentFragment>
  <footer
    class="css-dl99x8-FooterWrapper enubu9x10"
  >
    <div
      class="css-1fxijoh-FooterPaperWrapper enubu9x6"
    >
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      />
      <div
        class="css-41fvzk-LinksGroup enubu9x2"
      >
        <div
          class="css-85dbd7-FooterSeparator enubu9x3"
        />
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
